# inventory-backend

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: test.yml
activity/application/: get_own_records.py
activity/domain/: record.py  record_repository.py
activity/infrastructure/: in_memory_record_repository.py  sqlite_record_repository.py  supabase_record_repository.py
auth/application/: login_user.py  register_user.py
auth/domain/: auth_token.py  logged_user_info.py  password_hasher.py  token_manager.py
auth/infrastructure/: bcrypt_password_hasher.py  jwt_token_manager.py
emails/domain/: email.py  email_sender.py  emailer.py  product_created.py  stock_warning.py
emails/infrastructure/: console_mailer.py  smtp_gmailer.py
products/application/: create_product.py  delete_by_id.py  get_all.py  get_by_id.py  register_arrival.py  register_sell.py  search_by_name.py
products/domain/: product.py  product_repository.py
products/infrastructure/: dynamodb_product_repository.py  in_memory_product_repository.py  sqlite_product_repository.py  supabase_product_repository.py
shared/domain/: exception.py  logger.py
shared/infrastructure/: basic_logger.py  env.py  sqlite_connection.py  sqlite_error_codes.py
tests/: conftest.py  mocks.py  test_create_product.py  test_delete_product.py  test_get_product_by_id.py  test_register_arrival.py  test_register_sell.py
tests/mothers/: product.py  sale.py
users/domain/: user.py  user_repository.py
users/infrastructure/: in_memory_user_repository.py  (+2 more)
(+28 files in other folders)
